# HipSegmenter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Logic/: CMakeLists.txt  ChainedOperator.cpp  ChainedOperator.h  Image.cpp  Image.h  ImageFormat.cpp  ImageFormat.h  Operation.cpp  Operation.h  OperationConfig.cpp  OperationConfig.h  OperationFactory.h  OperationType.h  Parameter.cpp  Validators.h
Logic/operations/: BlockConfig.cpp  BlockConfig.h  BlockOperation.cpp  BlockOperation.h  CMakeLists.txt  FieldDescriptor.cpp  FieldDescriptor.h  LoadImageBlock.cpp  LoadImageBlock.h  Operation.cpp  Operation.h  Parameter.h  StringParameter.h
Logic/operations/parameters/: CMakeLists.txt  StringParameter.cpp  StringParameter.h
UI/: .qmake.stash  BlockFactory.cpp  BlockFactory.h  BlockListStyle.cpp  BlockListStyle.h  BlockOperation.cpp  BlockOperation.h  BlockWidget.cpp  BlockWidget.h  CMakeLists.txt  FileSettingWidget.cpp  FileSettingWidget.h  FileSettingWidget.ui  FileUtil.h  LoadImageBlock.h  MainWindow.cpp  MainWindow.h  OperationBlockLabel.cpp  OperationBlockLabel.h  OperationBlockWidget.cpp  OperationBlockWidget.h  OperationLabel.cpp  OperationLabel.h  OperationsListWidget.cpp  OperationsListWidget.h  OperationsToolBox.cpp  OperationsToolBox.h  ParameterChanger.h  SettingsDialog.cpp  SettingsDialog.h  UI.pro  main.cpp  mainwindow.ui  operationblockwidget.ui  operationlabel.ui  operationstoolbox.ui  resource.qrc
UI/blocks/: BlockFactory.cpp  BlockFactory.h  BlockType.h  BlockWidget.cpp  BlockWidget.h  blockwidget.ui
UI/execution/: BlockListStyle.cpp  OperationsListWidget.cpp  OperationsListWidget.h  operationslistwidget.ui
UI/execution/blocks/: BlockWidget.cpp  BlockWidget.h  SettingsDialog.cpp  SettingsDialog.h  settingsdialog.ui
UI/execution/blocks/settings/: FileGetterWidget.cpp  FileGetterWidget.h  FileGetterWidget.ui  ParameterChanger.h
UI/toolbox/: OperationNameWidget.cpp  OperationNameWidget.h  OperationsToolWidget.cpp  OperationsToolWidget.h  operationnamewidget.ui  operationstoolwidget.ui
